--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,6 @@ edition = "2021"
 [dependencies]
 confy = "0.5.1"
 eframe = "0.20.1"
-ehttp = "0.2.0"
 poll-promise = "0.2.0"
 serde = { version = "1.0.152", features = ["derive"] }
+reqwest = { version = "0.11.3", features = ["blocking"] }
