--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,4 +10,5 @@ confy = "0.5.1"
 eframe = "0.20.1"
 poll-promise = "0.2.0"
 serde = { version = "1.0.152", features = ["derive"] }
+serde_json = "1.0.91"
 reqwest = { version = "0.11.3", features = ["blocking"] }
