--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,4 @@ poll-promise = "0.2.0"
 serde = { version = "1.0.152", features = ["derive"] }
 serde_json = "1.0.91"
 reqwest = { version = "0.11.3", features = ["blocking"] }
+scraper = "0.14.0"
