--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,5 @@ serde = { version = "1.0.152", features = ["derive"] }
 serde_json = "1.0.91"
 reqwest = { version = "0.11.3", features = ["blocking"] }
 scraper = "0.14.0"
+strum = "0.24"
+strum_macros = "0.24"
