--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,4 @@ reqwest = { version = "0.11.3", features = ["blocking"] }
 scraper = "0.14.0"
 strum = "0.24"
 strum_macros = "0.24"
+lazy_static = "1.4.0"
